--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ POSTGRES_PASSWORD="TwYsX94PRvCx"
 POSTGRES_DATABASE="verceldb"
 
 # `openssl rand -base64 32`
-AUTH_SECRET=
+AUTH_SECRET="xGsA2e9cNDMRBLgZNpDKP95cEpBR+OgOhYebVLlj2Og="
 AUTH_URL=http://localhost:3000/api/auth
